// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when the formWithValidations HOC is wraps a component matches the snapshot when the it is passed an anonymous component with no name or display name 1`] = `
<ContextProvider
  value={
    Object {
      "addInput": [Function],
      "adjustCount": [Function],
      "removeInput": [Function],
    }
  }
>
  <Component
    errorCount={0}
    infoCount={0}
    isValidating={false}
    validate={[Function]}
    warningCount={0}
  >
    errors: 
    0
  </Component>
</ContextProvider>
`;

exports[`when the formWithValidations HOC is wraps a component matches the snapshot, rendering with default props for each of its children 1`] = `
<ContextProvider
  value={
    Object {
      "addInput": [Function],
      "adjustCount": [Function],
      "removeInput": [Function],
    }
  }
>
  <MockComponent
    errorCount={0}
    infoCount={0}
    isValidating={false}
    validate={[Function]}
    warningCount={0}
  >
    errors: 
    0
    <MockComponent
      error={[Function]}
      info={[Function]}
      name="foo"
      value="foo"
      warning={[Function]}
    />
    <MockComponent
      error={[Function]}
      info={[Function]}
      name="bar"
      value=""
      warning={[Function]}
    />
  </MockComponent>
</ContextProvider>
`;
